cluster/apps/selfhosted/wikijs/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wikijs
  namespace: default
  labels:
    app.kubernetes.io/name: wikijs
spec:
  replicas: 1
  strategy:
    # All existing Pods are killed before new ones are created
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: wikijs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wikijs
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: wikijs-data
          persistentVolumeClaim:
            claimName: wikijs-data
        - name: wikijs-config
          configMap:
            name: wikijs-config

      containers:
        - name: wikijs
          image: ghcr.io/requarks/wiki:2.5.287
          imagePullPolicy: IfNotPresent
          env: []
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          startupProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 60
            httpGet:
              path: /healthz
              port: http
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          volumeMounts:
            - name: wikijs-data
              mountPath: /usr/wikijs/assets
            - name: wikijs-config
              mountPath: /wiki/config.yml
              subPath: config.yml
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 1024Mi
              cpu: 3500m
