cluster/apps/selfhosted/wikijs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: wikijs
  type: ClusterIP
