cluster/apps/selfhosted/wikijs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs
  namespace: default
spec:
  rules:
    - host: &host "wiki.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikijs
                port:
                  number: 80
  tls:
    - hosts:
        - *host
